modified:   Home.html 	new file:   images/Covid-19trackerhome.png 	new file:   images/Gmail.png 	new file:   images/github.png 	new file:   images/linkedin.png 	new file:   images/phone.png 	new file:   images/profile.jpg 	new file:   images/skype.png 	new file:   images/twitter.png 	new file:   scripts/home.js 	new file:   styles/home.css

--- a/Home.html
+++ b/Home.html
@@ -1,14 +1,193 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home-My_ws-dan</title>
+	<title>My_ws-dan</title>
+	<link rel="stylesheet" type="text/css" href="styles/home.css">
 </head>
 <body>
-<div>
-	<label>hello</label>
-	<p>helloe this is my web site look over there hey!!</p>
+<div id="banner">
+				<div style="float: left;background:  teal;position: relative;">
+				<img src="images/profile.jpg" width="80px">
+				</div>
+				<div style="padding-top: 30px;padding-left: 105px">
+					<center><label style="font-size: 24px"><u>My-ws-dan</u></label>
+				</div>
+			</div>
+<div id="menubar">
+	<ul id="ulmenu">
+		<li class="active"><a href="#">Home</a></li>
+		<li><a href="#">Projects</a></li>
+		<li><a href="#">Events</a></li>
+		<li><a href="#">Links</a></li>
+	</ul>
+	
 </div>
-<div>content</div>
-<div>footer</div>
+<div id="content">
+
+	<div id="smallcards">
+		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">Bio</label></center><br>
+		<p>
+			<b>My location:</b><br>
+
+			<ul id="myplace">
+				<li><span class="caret">Africa</span>
+					<ul class="nested">
+						<li>Central Africa</li>
+						<li>Souther Africa</li>
+				<li><span class="caret">Eastern Africa</span>
+					<ul class="nested">
+						<li>Uganda</li>
+						<li>Tanzania</li>
+
+				<li><span class="caret">Kenya</span>
+					<ul class="nested">
+						<li>Rift-vale</li>
+						<li>Eldoret</li>
+					</ul>
+
+				</li>
+				</ul>
+				</li>
+				</ul>
+				</li>
+
+			</ul>
+
+
+			<br>
+			My studies records 
+			<ol>
+					<li>Moi Barracks primary</li>
+					<li>Paul Boit High School</li>
+					<li>Kibabii University</li>
+				</ol> 
+			I am a software developer and I begun it in the year 2017. My  Area of Specialization is : 
+				<ol>
+					<li>Android development</li>
+					<li>Web development</li>
+					<li>Desktop application (JAVA)</li>
+				</ol> 
+		</p>
+
+	</div><br>
+	<div id="smallcards">
+		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">Likes and Dislikes</label></center><br>
+		<b>likes</b>
+		<ol>
+					<li>Watching (Documentary)</li>
+					<li>Listening to Music (Rocks)</li>
+					<li>Arguing</li>
+				</ol> <br>
+				<b>dislikes</b>
+		<ol>
+					<li>Being Undermined</li>
+					<li>Listening to Music (Rocks)</li>
+					<li>Arguing</li>
+				</ol> 
+		<p>
+			
+		</p>
+
+	</div><br>
+	<div id="largecards">
+		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">My Activities</label></center><br>
+		<p>
+			My most done activity is coding and also design.I have been in coding since 2017 and i can testify that it's 
+			my favorite activity and also its my area of professionalizim.I mostly do web development since i have more intrest in 
+			web content and also love its cababilities to reach more people easy.<br>
+			I also do Android development but currently at my early stage off learning the amaizing technology that is right our my palm<br>
+			Not forgetting Desktop application development where have also major in office Automation and currently doing some of inteligent system 
+			
+		</p>
+		<p>
+			In web development i have several web site that are currently running (hosted).Some of the web site that have done
+			are listed below with there links 
+		</p>
+		<p>
+			In android  development have few apps but am yet to do more
+		</p>
+
+	</div><br>
+
+	<div id="largecards">
+
+		<center><label><b>Here are some of my coding activities</b></label></center><br>
+		<p>
+			<b>web development activity</b><br>
+			<ol>
+				<li>Covid-19tracker
+					<ul>
+						<li>Daily breffing</li>
+						<p style="color: #000000">
+							<img src="images/Covid-19trackerhome.png" height="100px"><br>
+							a visualization of daily figures report
+
+						</p>
+						<li>Health guide</li>
+						<p style="color: #000000">quick health infor on the pandemic</p>
+					</ul>
+
+				</li>
+				<li>Hostel Booking
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li>Hotel management
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+		
+	</div><br>
+
+
+</div>
+
+
+<div id="footer">
+<center>
+	<label style="font-size: 24px">Best Quote</label>
+	<p>If you thing you don't know than go outside there and you will see how skill full you are, If you think you know go out there and you will meet experts !!!</p> <br>
+
+	<label style="font-size: 24px">Reach me ...</label><br>
+	<img src="images/phone.png"><label> : 0791958878</label>&nbsp;&nbsp;&nbsp;
+	<img src="images/phone.png"><label> : 0738161992</label><br><br>
+	<a href="mailto:kirwadan03@gmail.com?subject=My reach out!" style="color: white"><img src="images/Gmail.png"> : Email</a>
+	&nbsp;&nbsp;&nbsp;
+	<a href="#" style="color: white"><img src="images/twitter.png"> : Twitter</a>
+	&nbsp;&nbsp;&nbsp;
+	<a href="#" style="color: white"><img src="images/skype.png"> : Skype</a>
+	&nbsp;&nbsp;&nbsp;
+	<a href="#" style="color: white"><img src="images/linkedin.png"> : Linkedin</a></label><br>
+
+	<p>
+		&copy; 2020-2020  &trade; My-ms-dan.com    
+	</p>
+</center>
+</div>
+<script type="text/javascript"></script>
+<script type="text/javascript">
+
+var toggler = document.getElementsByClassName("caret");
+var i;
+
+for (i = 0; i < toggler.length; i++) {
+  toggler[i].addEventListener("click", function() {
+    this.parentElement.querySelector(".nested").classList.toggle("active");
+    this.classList.toggle("caret-down");
+  });
+}
+
+</script>
 </body>
 </html>
