--- a/Projects.html
+++ b/Projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Events</title>
+	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
 </head>
 <body>
@@ -9,15 +9,15 @@
 	<div id="navbar">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="org logo" width="40px" style="border-radius: 50%"></a>
   <div id="navbar-right">
-  	<a class="active"  href="#">Events</a>
+  	<a class="active"   href="#">Projects</a>
+  	<a href="Events.html">Events</a>
   	<a href="Home.html">Home</a>
-    <a href="Projects.html">Projects</a>
     <a href="Links.html">Link</a>
   </div>
 </div>
 <div id="content">
 
-	upcoming events &#128165;&#128165;&#128165;&#128165;
+	will drop  projects soon &#128073;&#128073;&#128073;&#128073;&#128198;
 </div>
 <div id="moveup">
 	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
