--- a/Home.html
+++ b/Home.html
@@ -70,12 +70,13 @@
 		<ol>
 					<li>Watching (Documentary)</li>
 					<li>Listening to Music (Rocks)</li>
+					<li>Travelling &#128652;</li>
 					<li>Arguing</li>
 				</ol> <br>
 				<b>dislikes</b>
 		<ol>
 					<li>Being Undermined</li>
-					<li>Listening to Music (Rocks)</li>
+					<li>Reading &#128214;</li>
 					<li>Arguing</li>
 				</ol> 
 		<p>
@@ -109,7 +110,7 @@
 		<p>
 			<b>web development activity</b><br>
 			<ol>
-				<li>Covid-19tracker
+				<li><a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">Covid-19tracker</a>
 					<ul>
 						<li>Daily breffing</li>
 						<p style="color: #000000">
@@ -122,7 +123,7 @@
 					</ul>
 
 				</li>
-				<li>Hostel Booking
+				<li><a href="https://kibabii-hostels.herokuapp.com/Home.html" target="_blank">Hostel Booking</a>
 					<ul>
 						<li>Available hostel</li>
 						<p style="color: #000000">a visualization of hostel that can be booked</p>
@@ -136,6 +137,22 @@
 						<p style="color: #000000">a visualization of rooms that can be booked</p>
 						<li>tour</li>
 						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="https://hospitalmanagementphp.herokuapp.com/Home.html" target="_blank">Hospital Management</a>
+					<ul>
+						<li>Book Doctor</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="https://hidden-gems-safari.herokuapp.com/Home.html" target="_blank">Hiddengems safari web site</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
 					</ul>
 				</li>
 			</ol>
@@ -207,20 +224,11 @@
 	</center>
 	</center>
 	</div>
+
+	<!-- body end start of scripts -->
+<script type="text/javascript" src="scripts/home.js"></script>
 <script type="text/javascript">
-	
-			var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-400px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-</script>
-<script type="text/javascript">
+
 
 var toggler = document.getElementsByClassName("caret");
 var i;
@@ -232,30 +240,6 @@ for (i = 0; i < toggler.length; i++) {
   });
 }
 
-//
-//Get the button
-var mybutton = document.getElementById("up");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-
 	</script>
-
-
-</script>
 </body>
 </html>
