--- a/Links.html
+++ b/Links.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Events</title>
+	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	 <meta charset="UTF-8">
 </head>
 <body>
 
 	<div id="navbar">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="org logo" width="40px" style="border-radius: 50%"></a>
   <div id="navbar-right">
-  	<a class="active"  href="#">Events</a>
+  	<a class="active"  href="Links.html">Link</a>
   	<a href="Home.html">Home</a>
-    <a href="Projects.html">Projects</a>
-    <a href="Links.html">Link</a>
+  	<a href="Projects.html">Projects</a>
+  	<a href="Events.html">Events</a>
   </div>
 </div>
 <div id="content">
 
-	upcoming events &#128165;&#128165;&#128165;&#128165;
+	link with me &#128071;&#128071;&#128071;&#128071;
 </div>
 <div id="moveup">
 	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
