--- a/Events.html
+++ b/Events.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Events</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
