--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
 	<title>My_ws-dan</title>
 	<link rel="stylesheet" type="text/css" href="styles/home.css">
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -139,7 +140,7 @@
 						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
 					</ul>
 				</li>
-				<li><a href="https://hospitalmanagementphp.herokuapp.com/Home.html" target="_blank">Hospital Management</a>
+				<li><a href="https://hospitalmanagementphp.herokuapp.com/Home.php" target="_blank">Hospital Management</a>
 					<ul>
 						<li>Book Doctor</li>
 						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
@@ -219,7 +220,7 @@
 	
 	</table>
 	<p>
-		&copy; 2020-2020  &trade; &nbsp;&nbsp; my-ws-dan.com    
+		&copy; 2020-2020  &trade; &nbsp;&nbsp; <a href="https://my-ws-dan.herokuapp.com/Home.html">my-ws-dan.com</a>    
 	</p>
 	</center>
 	</center>
