--- a/Links.html
+++ b/Links.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 <meta charset="UTF-8">
 </head>
 <body>
