--- a/Events.html
+++ b/Events.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Events</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<link rel="stylesheet" type="text/css" href="styles/events.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -18,10 +19,101 @@
 </div>
 <div id="content">
 
-	upcoming events &#128165;&#128165;&#128165;&#128165;
+<center><label>my  &#128165;&#128165;&#128165;&#128165; events</label></center><br>
+
+<div id="myeventsinfor">
+	<center><header><b>Events and activities participated </b></header></center>
+	<br><br>
+	<p>
+		Here are some of the most iconic events that i have participated in and some photos<br>
+		most of my events are technology basesd and also so some fun moments
+	</p>
+	
+</div><br>
+<div id="myevents">
+	<center><header><b>At Kibabii University</b> </header></center>
+	<p>
+		<span>Kibabii University Informatic Club</span> is a group of studens at the university who are intrested in technology.
+		We are able to connect to students and other community members  
+	</p>
+
+	
+	<div id="imageholder">
+		<br>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	
+	</center>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+	</div>
+
+	<br><br>
+</div>	<br>
+<div id="myevents">
+	<center><header><b>GDG</b> </header></center>
+<p>
+	<span>Google Developer Groups</span> When you join a Google Developer Group, you'll have the opportunity to meet local developers with similar interests in technology.
+</p>
+
+<div id="imageholder">
+		<br>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+	</div>
+	<br><br>
+</div><br>
+<div id="myevents">
+	<center><header><b>DSC</b> </header></center>
+<p>
+	<span>Developer Student Clubs</span> are university based community groups for students interested in Google developer technologies. Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome. By joining a DSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.
+</p>
+<div id="imageholder">
+		<br>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+	</div>
+	<br><br>
+</div><br>
+<div id="myevents">
+	<center><header><b>KUUIA</b> </header></center>
+	<p>
+		<span>Kibabii University Informatic Club</span> is a group of studens at the university who are intrested in technology.
+		We are able to connect to students and other community members  
+	</p>
+	<div id="imageholder">
+		<br>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+		<center>
+	<img src="images/events/event1.jpg" width="214px">
+	<img src="images/events/event1.jpg" width="214px">
+	</center>
+	</div>
+
+	<br><br>
+</div>
+
 </div>
 <div id="moveup">
-	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
+	<center><div id="updiv"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
 	
 </div> 
 
@@ -98,7 +190,7 @@ var currentScrollPos = window.pageYOffset;
 
 
 //Get the button
-var mybutton = document.getElementById("up");
+var mybutton = document.getElementById("updiv");
 
 // When the user scrolls down 20px from the top of the document, show the button
 window.onscroll = function() {scrollFunction()};
