--- a/Home.html
+++ b/Home.html
@@ -109,7 +109,7 @@
 
 		<center><label><b>Here are some of my coding activities</b></label></center><br>
 		<p>
-			<b>web development activity</b><br>
+			<b>web development projects</b><br>
 			<ol>
 				<li><a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">Covid-19tracker</a>
 					<ul>
@@ -161,6 +161,65 @@
 		</p>
 		
 	</div><br>
+
+	<div id="largecards">
+
+	<center><label><b>Other coding activity</b></label></center><br>
+
+	<p>
+			<b>Desktop application projects</b><br>
+			<ol>
+				<li><a href="#" target="_blank">Chat App</a>
+					<ul>
+						<li>Server</li>
+						<p style="color: #000000">
+							<img src="images/screenshots/Covid-19trackerhome.png" height="100px"><br>
+							a visualization of daily figures report
+
+						</p>
+						<li>Client</li>
+						<p style="color: #000000">quick health infor on the pandemic</p>
+					</ul>
+
+				</li>
+				<li><a href="#">Hotel Management</a>
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li><a href="#">Media Player</a>
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Hospital Management</a>
+					<ul>
+						<li>Book Doctor</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Car Lease App</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+
+		
+	</div>
 
 
 </div>
