--- a/Events.html
+++ b/Events.html
@@ -113,7 +113,7 @@
 
 </div>
 <div id="moveup">
-	<center><div id="updiv"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
+	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
 	
 </div> 
 
@@ -173,42 +173,7 @@
 	</center>
 	</div>
 
-	<script type="text/javascript">
-	
-			var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-400px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-
-/// 
-
-
-//Get the button
-var mybutton = document.getElementById("updiv");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
+	<script type="text/javascript" src="scripts/events.js"></script>
 
 </body>
 </html>
