--- a/Events.html
+++ b/Events.html
@@ -22,7 +22,7 @@
 <center><label>my  &#128165;&#128165;&#128165;&#128165; events</label></center><br>
 
 <div id="myeventsinfor">
-	<center><header><b>&nbsp;&nbsp;&nbsp;&nbsp;Events and activities participated </b></header></center>
+	<center><header><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events and activities participated </b></header></center>
 	<br><br>
 	<p>
 		Here are some of the most iconic events that i have participated in and some photos<br>
