--- a/Links.html
+++ b/Links.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<link rel="stylesheet" type="text/css" href="styles/links.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 <meta charset="UTF-8">
 </head>
@@ -20,6 +21,20 @@
 <div id="content">
 
 	link with me &#128071;&#128071;&#128071;&#128071;
+	<br>
+	<div id="linkholder">
+		<div id="linkpotrait">
+			<img src="images/profile.jpg" alt="org logo" width="40px">
+			<label>hellow</label>
+		</div>
+		<div id="linkdiscription">
+			<label><b>hellow</b></label><br>
+			<p>
+				htis is my link 
+			</p>
+		</div>
+	</div>
+
 </div>
 <div id="moveup">
 	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
@@ -82,42 +97,7 @@
 	</center>
 	</div>
 
-	<script type="text/javascript">
-	
-			var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-400px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-
-/// 
-
-
-//Get the button
-var mybutton = document.getElementById("up");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
-</script>
+	<script type="text/javascript" src="scripts/links.js"></script>
 
 </body>
 </html>
