--- a/Home.html
+++ b/Home.html
@@ -220,6 +220,64 @@
 
 		
 	</div>
+	<br>
+	<div id="largecards">
+
+	<center><label><b>More coding activity</b></label></center><br>
+
+	<p>
+			<b>Android application projects</b><br>
+			<ol>
+				<li><a href="#" target="_blank">Quiz App</a>
+					<ul>
+						<li>Quiz</li>
+						<p style="color: #000000">
+							<img src="images/screenshots/Covid-19trackerhome.png" height="100px"><br>
+							This is a fun quiz app with set qustions and fixed time frame to answer
+
+						</p>
+						
+					</ul>
+
+				</li>
+				<li><a href="#">Calculator</a>
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li><a href="#">Tickets app</a>
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Hostel Booking app</a>
+					<ul>
+						<li>Hostel Booking app</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Note Book</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+
+		
+	</div>
 
 
 </div>
