modified:   Links.html

--- a/Links.html
+++ b/Links.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 <meta charset="UTF-8">
 </head>
-<body  style="background-image: url(images/mat.jpg);">
+<body>
 
 	<div id="navbar">
   <a href="#default" id="logo"><img src="images/profile.jpg" alt="org logo" width="40px" style="border-radius: 50%"></a>
