modified:   Home.html 	modified:   Links.html 	modified:   Projects.html 	new file:   scripts/projects.js 	modified:   styles/links.css 	new file:   styles/projects.css

--- a/Projects.html
+++ b/Projects.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<link rel="stylesheet" type="text/css" href="styles/projects.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -18,7 +19,186 @@
 </div>
 <div id="content">
 
-	will drop  projects soon &#128073;&#128073;&#128073;&#128073;&#128198;
+	still droping projects sorry for repeat &#128073;&#128073;&#128073;&#128073;
+<!-- start -->
+
+	<div id="largecards">
+
+		<center><label><b>Here are some of my coding activities</b></label></center><br>
+		<p>
+			<b>web development projects</b><br>
+			<ol>
+				<li><a href="https://kenyacovid-19tracker.herokuapp.com/Home.html" target="_blank">Covid-19tracker</a>
+					<ul>
+						<li>Daily breffing</li>
+						<p style="color: #000000">
+							<img src="images/screenshots/Covid-19trackerhome.png" height="100px"><br>
+							a visualization of daily figures report
+
+						</p>
+						<li>Health guide</li>
+						<p style="color: #000000">quick health infor on the pandemic</p>
+					</ul>
+
+				</li>
+				<li><a href="https://kibabii-hostels.herokuapp.com/Home.html" target="_blank">Hostel Booking</a>
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li>Hotel management
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="https://hospitalmanagementphp.herokuapp.com/Home.php" target="_blank">Hospital Management</a>
+					<ul>
+						<li>Book Doctor</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="https://hidden-gems-safari.herokuapp.com/Home.html" target="_blank">Hiddengems safari web site</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+		
+	</div><br>
+
+	<div id="largecards">
+
+	<center><label><b>Other coding activity</b></label></center><br>
+
+	<p>
+			<b>Desktop application projects</b><br>
+			<ol>
+				<li><a href="#" target="_blank">Chat App</a>
+					<ul>
+						<li>Server</li>
+						<p style="color: #000000">
+							<img src="images/screenshots/Covid-19trackerhome.png" height="100px"><br>
+							a visualization of daily figures report
+
+						</p>
+						<li>Client</li>
+						<p style="color: #000000">quick health infor on the pandemic</p>
+					</ul>
+
+				</li>
+				<li><a href="#">Hotel Management</a>
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li><a href="#">Media Player</a>
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Hospital Management</a>
+					<ul>
+						<li>Book Doctor</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Car Lease App</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+
+		
+	</div>
+	<br>
+	<div id="largecards">
+
+	<center><label><b>More coding activity</b></label></center><br>
+
+	<p>
+			<b>Android application projects</b><br>
+			<ol>
+				<li><a href="#" target="_blank">Quiz App</a>
+					<ul>
+						<li>Quiz</li>
+						<p style="color: #000000">
+							<img src="images/screenshots/Covid-19trackerhome.png" height="100px"><br>
+							This is a fun quiz app with set qustions and fixed time frame to answer
+
+						</p>
+						
+					</ul>
+
+				</li>
+				<li><a href="#">Calculator</a>
+					<ul>
+						<li>Available hostel</li>
+						<p style="color: #000000">a visualization of hostel that can be booked</p>
+						<li>My profile</li>
+						<p style="color: #000000">quick general infor of your account</p>
+					</ul>
+				</li>
+				<li><a href="#">Tickets app</a>
+					<ul>
+						<li>Available rooms</li>
+						<p style="color: #000000">a visualization of rooms that can be booked</p>
+						<li>tour</li>
+						<p style="color: #000000">quick way to plan for a trips to national/reserves</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Hostel Booking app</a>
+					<ul>
+						<li>Hostel Booking app</li>
+						<p style="color: #000000">Provide easy booking and scheduling of visit to the hospital</p>
+						<li>My Prescription</li>
+						<p style="color: #000000">direct access to your prescription at any place with your respective medicine</p>
+					</ul>
+				</li>
+				<li><a href="#" target="_blank">Note Book</a> 
+					<ul>
+						<li>Kenya</li>
+						<p style="color: #000000">A brief discription of country kenya and some of its iconic places to  visit</p>
+						<li>tour</li>
+						<p style="color: #000000">Planed way to schedule your safari </p>
+					</ul>
+				</li>
+			</ol>
+
+		</p>
+
+		
+	</div>
+
+
+<!-- end -->
+
 </div>
 <div id="moveup">
 	<center><div id="up"><a> <img src="images/moveup.png" id="up" onclick="topFunction()"> </a></div></center>
@@ -81,42 +261,7 @@
 	</center>
 	</div>
 
-	<script type="text/javascript">
-	
-			var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-400px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-
-/// 
-
-
-//Get the button
-var mybutton = document.getElementById("up");
-
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    mybutton.style.display = "block";
-  } else {
-    mybutton.style.display = "none";
-  }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
+	<script type="text/javascript" src="scripts/projects.js">
 </script>
-
 </body>
 </html>
