--- a/Home.html
+++ b/Home.html
@@ -18,8 +18,20 @@
   </div>
 </div>
 <div id="content">
+	<div id="largecards" style="background-image: url(images/background7.png); background-size: cover;">
+		<center><label style="font-size: 24px;text-shadow: 0 0 5px; color: white">Sight</label></center><br>
+		
+	 <p style="font-size: 24px">
+	 	<u>There are two ways of spreading light to be the candle or the mirror that reflects it</u> <br>
+	 	"You can't connect the dots looking forward; you can only connect them looking backward. So you have to trust that the dots will somehow connect in your future. You have to trust in something -- your gut, destiny, life, karma, whatever. This approach has never let me down, and it has made all the difference in my life."
+	 </p> 
+	 <br>
+	 <center>
+	 <img src="images/profile.jpg" alt="org logo" width="50%" style="border-radius: 30%">
+	 </center>
+	</div><br>
 
-	<div id="smallcards">
+	<div id="smallcards" style="background-image: url(images/background8.png); background-size: cover;">
 		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">Bio</label></center><br>
 		<p>
 			<b>My location:</b><br>
@@ -65,7 +77,7 @@
 		</p>
 
 	</div><br>
-	<div id="smallcards">
+	<div id="smallcards" style="background-image: url(images/background7.png); background-size: cover;">
 		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">Likes and Dislikes</label></center><br>
 		<b>likes</b>
 		<ol>
@@ -85,7 +97,7 @@
 		</p>
 
 	</div><br>
-	<div id="largecards">
+	<div id="largecards" style="background-image: url(images/background8.png); background-size: cover;">
 		<center><label style="font-size: 24px;text-shadow: 0 0 5px;">My Activities</label></center><br>
 		<p>
 			My most done activity is coding and also design.I have been in coding since 2017 and i can testify that it's 
