--- a/Links.html
+++ b/Links.html
@@ -21,7 +21,7 @@
 <div id="content">
 
 	link with me &#128071;&#128071;&#128071;&#128071;
-	<br>
+	<br><br>
 	<div id="mainlink">
 	<div id="linkholder">
 		<div id="linkpotrait">
@@ -38,12 +38,47 @@
 	you meet experts !!!</b>	 
 			</p>
 		</div>
-	</div>
+	</div><br>
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/github2.png" alt="mail box" width="80px"><br>
-			<label>Github  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<img src="images/skype.png" alt="mail box" width="80px"><br>
+			<label>SKYPE  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			</center>
+		</div>
+		<div id="linkdiscription">
+			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b></p>
+			<p style="color: black">
+			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b>	 
+			</p>
+		</div>
+	</div>
+</div>
+<br>
+<div id="mainlink">
+	<div id="linkholder">
+		<div id="linkpotrait">
+			<center>
+			<img src="images/facebook2.png" alt="mail box" width="80px"><br>
+			<label>Facebook  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			</center>
+		</div>
+		<div id="linkdiscription">
+			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b></p>
+			<p style="color: black">
+			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b>	 
+			</p>
+		</div>
+	</div> <br>
+	<div id="linkholder">
+		<div id="linkpotrait">
+			<center>
+			<img src="images/linkedin.png" alt="mail box" width="80px"><br>
+			<label>Linkedin  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
