--- a/Links.html
+++ b/Links.html
@@ -26,7 +26,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/github2.png" alt="mail box" width="80px"><br>
+			<img src="images/github2.png" alt="github icon" width="80px"><br>
 			<label>Github  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -42,7 +42,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/skype.png" alt="mail box" width="80px"><br>
+			<img src="images/skype.png" alt="Skype icon" width="80px"><br>
 			<label>SKYPE  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -61,7 +61,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/facebook2.png" alt="mail box" width="80px"><br>
+			<img src="images/facebook2.png" alt="facebook icon" width="80px"><br>
 			<label>Facebook  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -79,6 +79,41 @@
 			<center>
 			<img src="images/linkedin.png" alt="mail box" width="80px"><br>
 			<label>Linkedin  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			</center>
+		</div>
+		<div id="linkdiscription">
+			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b></p>
+			<p style="color: black">
+			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b>	 
+			</p>
+		</div>
+	</div>
+</div>
+<br>
+<div id="mainlink">
+	<div id="linkholder">
+		<div id="linkpotrait">
+			<center>
+			<img src="images/Gmail.png" alt="facebook icon" width="80px"><br>
+			<label>Email  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			</center>
+		</div>
+		<div id="linkdiscription">
+			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b></p>
+			<p style="color: black">
+			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
+	you meet experts !!!</b>	 
+			</p>
+		</div>
+	</div> <br>
+	<div id="linkholder">
+		<div id="linkpotrait">
+			<center>
+			<img src="images/twitter.png" alt="twitter icon" width="80px"><br>
+			<label>Twitter  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
