--- a/Links.html
+++ b/Links.html
@@ -42,7 +42,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/skype.png" alt="Skype icon" width="80px"><br>
+			<img src="images/skype-icon.png" alt="Skype icon" width="80px"><br>
 			<label>SKYPE  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -77,7 +77,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/linkedin.png" alt="mail box" width="80px"><br>
+			<img src="images/linkedin-icon.png" alt="mail box" width="80px"><br>
 			<label>Linkedin  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -96,7 +96,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/Gmail.png" alt="facebook icon" width="80px"><br>
+			<img src="images/gmail-icon.png" alt="email icon" width="80px"><br>
 			<label>Email  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
@@ -112,7 +112,7 @@
 	<div id="linkholder">
 		<div id="linkpotrait">
 			<center>
-			<img src="images/twitter.png" alt="twitter icon" width="80px"><br>
+			<img src="images/Twitter-icon.png" alt="twitter icon" width="80px"><br>
 			<label>Twitter  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
