--- a/Links.html
+++ b/Links.html
@@ -27,15 +27,14 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/github2.png" alt="github icon" width="80px"><br>
-			<label>Github  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Github  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Connect with me on GitHub and have a look at my project posted on 
+			GitHub</b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>Github is a wonderful VCS that i have ever used.</b>	 
 			</p>
 		</div>
 	</div><br>
@@ -43,15 +42,13 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/skype-icon.png" alt="Skype icon" width="80px"><br>
-			<label>SKYPE  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>SKYPE  : </label>&nbsp;&nbsp;<a href="#" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Need video call you got it connect with me </b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>Will be nice to see developer</b>	 
 			</p>
 		</div>
 	</div>
@@ -62,15 +59,13 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/facebook2.png" alt="facebook icon" width="80px"><br>
-			<label>Facebook  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Facebook  : </label>&nbsp;&nbsp;<a href="https://facebook.com/Danny Dan" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Like social media connect with me on facebook </b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>Place to express your social charater</b>	 
 			</p>
 		</div>
 	</div> <br>
