--- a/Links.html
+++ b/Links.html
@@ -73,15 +73,13 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/linkedin-icon.png" alt="mail box" width="80px"><br>
-			<label>Linkedin  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Linkedin  : </label>&nbsp;&nbsp;<a href="#" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Job ! Career you got click the link </b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>There are more oppotunities out there come see</b>	 
 			</p>
 		</div>
 	</div>
@@ -92,15 +90,13 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/gmail-icon.png" alt="email icon" width="80px"><br>
-			<label>Email  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Email  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Want to send message go to inbox </b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>Connect to my inbox !</b>	 
 			</p>
 		</div>
 	</div> <br>
@@ -108,15 +104,13 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/Twitter-icon.png" alt="twitter icon" width="80px"><br>
-			<label>Twitter  : </label><a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Twitter  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
-			<p style="color: black"><b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b></p>
+			<p style="color: black"><b>Yet another wonderfull platform </b></p>
 			<p style="color: black">
-			<b>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
-	you meet experts !!!</b>	 
+			<b>Share your thoughts</b>	 
 			</p>
 		</div>
 	</div>
