--- a/Links.html
+++ b/Links.html
@@ -27,7 +27,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/github2.png" alt="github icon" width="80px"><br>
-			<label>Github  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Github  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
@@ -42,7 +42,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/skype-icon.png" alt="Skype icon" width="80px"><br>
-			<label>SKYPE  : </label>&nbsp;&nbsp;<a href="#" target="">Click here</a>
+			<label>SKYPE  : </label>&nbsp;&nbsp;<a href="#" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
@@ -59,7 +59,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/facebook2.png" alt="facebook icon" width="80px"><br>
-			<label>Facebook  : </label>&nbsp;&nbsp;<a href="https://facebook.com/Danny Dan" target="">Click here</a>
+			<label>Facebook  : </label>&nbsp;&nbsp;<a href="#" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
@@ -73,7 +73,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/linkedin-icon.png" alt="mail box" width="80px"><br>
-			<label>Linkedin  : </label>&nbsp;&nbsp;<a href="#" target="">Click here</a>
+			<label>Linkedin  : </label>&nbsp;&nbsp;<a href="#" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
@@ -90,7 +90,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/gmail-icon.png" alt="email icon" width="80px"><br>
-			<label>Email  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Email  : </label>&nbsp;&nbsp;<a href="#" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
@@ -104,7 +104,7 @@
 		<div id="linkpotrait">
 			<center>
 			<img src="images/Twitter-icon.png" alt="twitter icon" width="80px"><br>
-			<label>Twitter  : </label>&nbsp;&nbsp;<a href="https://github.com/danielkirwa" target="">Click here</a>
+			<label>Twitter  : </label>&nbsp;&nbsp;<a href="#" target="_blank">Click here</a>
 			</center>
 		</div>
 		<div id="linkdiscription">
