--- a/Links.html
+++ b/Links.html
@@ -129,7 +129,7 @@
 	<p>If you think you don't know then go out there and see how skill full you are<br> and if you think know go out there and
 	you meet experts !!!</p> <br>
 <center>
-	<label style="font-size: 24px">Reach us ...</label><br><br>
+	<label style="font-size: 24px">Reach me ...</label><br><br>
 	
 <table>
 			<tr>
