--- a/Links.html
+++ b/Links.html
@@ -96,7 +96,7 @@
 		<div id="linkdiscription">
 			<p style="color: black"><b>Want to send message go to inbox </b></p>
 			<p style="color: black">
-			<b>Connect to my inbox !</b>	 
+			<b>Connect to my inbox now!</b>	 
 			</p>
 		</div>
 	</div> <br>
