--- a/Events.html
+++ b/Events.html
@@ -31,7 +31,7 @@
 	
 </div><br>
 <div id="myevents">
-	<center><header><b>At Kibabii University</b> </header></center>
+	<center><header><b>Events At Kibabii University</b> </header></center>
 	<p>
 		<span>Kibabii University Informatic Club</span> is a group of studens at the university who are intrested in technology.
 		We are able to connect to students and other community members  
